--- a/project/index.html
+++ b/project/index.html
@@ -6,6 +6,7 @@
     <title>project</title>
     <link rel="stylesheet" type="text/css" href="./static/css/reset.css"/>
     <script src="./static/js/resize.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./static/js/tonpage.js"></script>
   </head>
   <body>
     <div id="app"></div>
